--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,4 +1,6 @@
 <article>
+  <header><h1>Welcome</h1></header>
+  <p>This is a placeholder sentence for the text that will be inserted in the near future. AKA Testing.</p>
   <header><h1>Projects</h1></header>
   <ul class="archive">
     {% for post in site.posts %}
