--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,6 +1,7 @@
 <article>
-  <header><h1>Welcome</h1></header>
-  <p>This is a placeholder sentence for the text that will be inserted in the near future. AKA Testing.</p>
+  <header><h1>Welcome!</h1></header>
+  <p>My name is Joshua Lee, and I am currently completing a Bachelors of Science in Electrical Engineering degree at Georgia Tech. I am pursuing an engineering career in the robotics field and am interested in electronic devices and exploratory robots. This website is a complete portfolio of my professional and technical experiences; please navigate the sidebar for more information on myself (including contact and resume) or see below for a compilation of my personal projects!
+</p>
   <header><h1>Projects</h1></header>
   <ul class="archive">
     {% for post in site.posts %}
